fix: fixed overflow issue

--- a/components/scoped/apply/Banner/styles.module.scss
+++ b/components/scoped/apply/Banner/styles.module.scss
@@ -3,6 +3,7 @@
 .root {
   height: 400px;
   margin-bottom: -100px;
+  overflow: hidden;
   @include screen('tablet') {
     margin-bottom: -80px;
   }
